# fin-trail

./: .gitignore  Cargo.toml  fin-manager.db  index.html
.style-build/: index.css  index.css.map
common/: Cargo.toml
common/src/: table.rs
mini-query/: Cargo.toml
mini-query/src/: data_fetcher.rs  lib.rs  mutation_observer.rs  query_cache.rs  query_client.rs  use_query.rs
public/: splashscreen.html
scripts/: start-sass.sh
src/: app.rs  main.rs  store.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: crud.rs  crud_transaction.rs  crud_wrapper.rs  driver.rs  general_macros.rs  mod.rs  postgres.rs  provider.rs  sqlite.rs  table.rs
src/components/: button.rs  home_layout.rs  mod.rs  side_app_bar.rs  table.rs
src/dto/: transaction.rs
src/hooks/: transaction.rs
src/routes/: mod.rs  splash.rs
src/routes/home/: account.rs  reccuring_transaction.rs  root.rs  transaction.rs
src/routes/init/: postgres.rs  sqlite3.rs
styles/: _dark-theme.scss  _light-theme.scss  _theme.scss  dark-theme.scss  design-token.scss  fonts.scss  light-theme.scss  styles.scss  theme.scss
styles/components/: button.scss  home-layout.scss  side-bar.scss
styles/init/: postgres.scss
styles/route/home/: _root.scss  _transaction.scss
styles/splash/: styles.scss
