[package]
name = "fin-manager-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos_router = "0.7.7"
leptos-routes = "0.3.1"
leptos-routes-macro = "0.3.1"
leptos_toaster = "0.2.0"
leptos-use = "0.15.7"
chrono = "0.4.41"

[workspace]
members = ["src-tauri"]
